Final cleanup: Remove manual script tag and trust Vite injection

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- 路径修正：确保所有绝对路径都包含 /Web-Ember/ -->
-    <link rel="icon" type="image/svg+xml" href="/Web-Ember/vite.svg" /> 
+    <!-- 路径修正：使用相对路径确保图标加载 -->
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory Dissipation - The Interweaving of Time and Emotion</title>
     <meta name="description" content="Explore the irreversible process of memory from clarity to blur, presenting the interweaving of emotion and time through art. Share your emotional story and feel the poetry and sorrow of memory dissipation." />
